Fixed scrolling overflow issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body {
 	height: 100%;
 	padding: 0px;
 	margin: 0px;
+  overflow: hidden;
 }
 
 h2.header {
